--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emailjs/browser": "^4.3.3",
     "@react-three/drei": "^9.101.0",
     "@react-three/fiber": "^8.15.19",
-    "framer-motion": "^11.0.8",
+    "framer-motion": "^11.0.12",
     "maath": "^0.10.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,6 +34,7 @@
     "postcss": "^8.4.35",
     "prefixer": "^0.0.3",
     "tailwindcss": "^3.4.1",
+    "three": "^0.162.0",
     "vite": "^5.1.4"
   }
 }
