--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.3.3",
     "@react-three/drei": "^9.101.0",
     "@react-three/fiber": "^8.15.19",
+    "emailjs": "^4.0.3",
     "framer-motion": "^11.0.12",
     "maath": "^0.10.7",
     "react": "^18.2.0",
